<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    android:padding="@dimen/widget_margin"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/widget_match_list"
        android:textAlignment="center"
        android:textStyle="bold"
        android:contentDescription="@string/ct_widget_match_title"
        />

    <ListView
        android:id="@+id/lv_widget_match"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/ct_widget_match_list"
        />

</LinearLayout>