<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="futmatcher.kildare.com.futmatcher.CreateMatchFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tv_create_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_match_title"
        tools:text="@string/hello_blank_fragment" />

    <TextView
        android:id="@+id/tv_match_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_match_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_create_title"
        app:layout_constraintBottom_toTopOf="@+id/et_match_title"
        />
    
    <EditText
        android:id="@+id/et_match_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_title"
        app:layout_constraintTop_toBottomOf="@id/tv_match_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_match_location"
        />

    <TextView
        android:id="@+id/tv_match_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_match_location"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_match_title"
        app:layout_constraintBottom_toTopOf="@+id/et_match_location"
        />

    <EditText
        android:id="@+id/et_match_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_match_location"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_match_title"
        app:layout_constraintBottom_toTopOf="@+id/et_match_title"
        />


    <TextView
        android:id="@+id/tv_match_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_match_date"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tv_num_players"
        app:layout_constraintTop_toBottomOf="@+id/et_match_location"
        app:layout_constraintBottom_toTopOf="@+id/et_match_date"
        />

    <EditText
        android:id="@+id/et_match_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_match_date"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/sp_num_players"
        />

    <TextView
        android:id="@+id/tv_num_players"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_match_num_players"
        app:layout_constraintTop_toBottomOf="@+id/et_match_location"
        app:layout_constraintLeft_toRightOf="@+id/tv_match_date"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Spinner
        android:id="@+id/sp_num_players"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_num_players"
        app:layout_constraintLeft_toRightOf="@+id/et_match_date"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/bt_create_match"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_create"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_match_date"
        />

</android.support.constraint.ConstraintLayout>
